--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,5 +17,6 @@
 
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
+<meta name="google-site-verification" content="0gxhx_r-aiKy_5UVJlEqkU7lKl7hpo3Gq9Sg1xnO35s"/>
 
 <meta http-equiv="cleartype" content="on">
