--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,13 @@
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DFY79XQGEE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DFY79XQGEE');
+</script>
+
 {% include base_path %}
 
 <meta charset="utf-8">
